--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,6 +93,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@drawable/cat_0804"
+        android:layout_gravity="center"
         android:scaleType="centerCrop" />
 
     <Button
