--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,12 +98,15 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@drawable/cat_0804"
+        android:layout_marginTop="5dp"
+        android:layout_gravity="center"
         android:scaleType="centerCrop" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="회원가입"
+        android:layout_marginTop="3dp"
         android:textColor="#4B89DC"
         android:textStyle="bold"/>
 
