--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="top"
     android:padding="15dp"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -53,13 +54,15 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="추천인 닉네임 검색"
+        android:hint="추천인 닉네임 검색 (준비중)"
+        android:enabled="false"
         android:singleLine="true"
         android:imeOptions="actionSearch"/>
 
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:orientation="horizontal">
 
         <RadioButton
@@ -90,7 +93,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#4B89DC"
-        android:text="마케팅 활용 동의합니다"
+        android:text="마케팅 활용 동의합니다 (준비중)"
+        android:enabled="false"
         android:textStyle="bold"
         android:checked="true"/>
 
@@ -102,13 +106,26 @@
         android:layout_gravity="center"
         android:scaleType="centerCrop" />
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="회원가입"
-        android:layout_marginTop="3dp"
-        android:textColor="#4B89DC"
-        android:textStyle="bold"/>
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="취소"
+            android:textColor="#4B89DC"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="회원가입"
+            android:textColor="#4B89DC" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
